# dzarn

./: .gitignore  .ocamlformat  AGENTS.md  Makefile  README.md  dune-project  dzarn.opam  flake.nix
design-doc/: 000_design.md
lib/: analyzer.ml  complexity.ml  config.ml  dune  dune_info.ml  json_reporter.ml  length.ml  main.ml  naming.ml  nolint.ml  types.ml
test/: dune  test_complexity.ml  test_config.ml  test_dzarn.ml  test_length.ml
test/fixtures/: all_ast_nodes.ml  all_used.ml  ast_coverage.ml  comprehensive_ast.ml  effect_handlers.ml  fun_protect_callback.ml  higher_order.ml  letop_with_pipe.ml  naming_valid.ml  naming_violations.ml  nolint.ml  nolint_atatat.ml  opened_module_bug.ml  pattern_matching.ml  pipe_operator_with_open.ml  polymorphic_variants.ml  private.ml  qualified_call_to_lib.ml  qualified_module_call.ml  records.ml  unused.ml  unused_nolint.ml  unused_with_comments.ml  unused_with_mli.ml  unused_with_mli.mli  used_nolint.ml  with_mli.ml  with_mli.mli
test/fixtures/include_subdirs_qualified/: dune  dune-project
test/fixtures/include_subdirs_qualified/lib/: dune  module.ml
test/fixtures/include_subdirs_qualified/lib/subdir/: inner.ml
test/fixtures/letop_cross_file/: bar.ml  foo.ml
test/fixtures/multi/: a.ml  b.ml
test/fixtures/open_module_cross_file/: bar.ml  foo.ml
test_manual/: lib.ml
