opam-version: "2.0"
synopsis: "Dzarn"
description: "Dzarn"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "MIT"
tags: []
homepage: "https://github.com/ushitora-anqou/dzarn"
doc: "https://github.com/ushitora-anqou/dzarn"
bug-reports: "https://github.com/ushitora-anqou/dzarn/issues"
depends: [
  "alcotest" {>= "1.9.1"}
  "cmdliner" {>= "1.3.0"}
  "dune" {>= "3.20"}
  "logs" {>= "0.9.0"}
  "ocaml" {>= "5.4.0"}
  "ppxlib" {>= "0.37.0"}
  "odoc" {>= "3.1.0"}
  "ppx_deriving" {>= "6.1.1"}
  "ppx_expect" {>= "v0.17.3"}
  "ppx_inline_test" {>= "v0.17.1"}
  "ppx_sexp_conv" {>= "v0.17.1"}
  "ppx_string_interpolation" {>= "1.1.0"}
  "sexplib" {>= "v0.17.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    #"@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/dzarn.git"
